# Firecash

./: .env.example  .gitignore  README.md  ROADMAP.md  docker-compose.yml
backend/: Cargo.toml  Dockerfile
backend/migrations/: 0001_init.sql  0002_budgets.sql  0002_categories_budgets_payees.sql  0002_missing_migration.sql  0002_recurring_transactions.sql  0002_transfers_reconciliation.sql  0002_users.sql  0003_accounts.sql  0004_account_groups.sql  0005_assets.sql  0006_transactions.sql  0007_recurring_transactions.sql  0008_price_history.sql  0009_fx_rates.sql  0010_api_keys.sql  0011_indexes.sql  0012_user_preferences.sql  0013_audit_logs.sql  0014_account_group_users.sql  0016_integrations.sql  0018_plugins.sql
backend/src/: audit.rs  auth.rs  main.rs  migrations.rs  models.rs  state.rs
backend/src/routes/: account_groups.rs  accounts.rs  admin.rs  api_tokens.rs  assets.rs  backup.rs  budgets.rs  categories.rs  dashboard.rs  integrations.rs  market.rs  metrics.rs  mod.rs  payees.rs  plugins.rs  preferences.rs  recurring_transactions.rs  transactions.rs  transfers.rs
backend/src/services/: forex.rs  integrations.rs  mod.rs  pricing.rs
docs/: CONTRIBUTING.md  accessibility.md  plugins.md
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/api/: accountGroups.ts  apiTokens.ts  audit.ts  backup.ts  integrations.ts  market.ts  preferences.ts  reports.ts  transactions.ts
frontend/src/components/: ActionToast.tsx  AuthContext.tsx  Breadcrumbs.tsx  ChartPanel.tsx  Charts.tsx  CurrencyContext.tsx  DateRangePicker.tsx  EmptyState.tsx  ErrorState.tsx  KpiCard.tsx  LoadingSkeleton.tsx  LoadingState.tsx  Modal.tsx  SelectionContext.tsx  Selectors.tsx
frontend/src/layouts/: Breadcrumbs.tsx  DashboardLayout.tsx  PrimaryNavigation.tsx
frontend/src/pages/: AccountsPage.tsx  (+10 more)
(+12 files in other folders)
