[package]
name = "firecash-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.7"
dotenvy = "0.15"
jsonwebtoken = "9.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.36", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.7", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.5", features = ["cors"] }
rand_core = "0.6"
