[package]
name = "firecash-api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
axum = "0.8"
dotenvy = "0.15"
jsonwebtoken = "9.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid", "chrono", "macros"] }
tokio = { version = "1.38", features = ["rt-multi-thread", "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.6", features = ["cors"] }
rand_core = "0.6"
base64ct = "=1.7.2"
home = "=0.5.11"
time-core = "=0.1.0"
time = "=0.3.17"
url = "=2.4.1"
idna = "=0.4.0"
